# bna-market

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .slugignore  .vercelignore  =2.8.0  API_IMPLEMENTATION_SUMMARY.md  API_QUICKSTART.md  BNASFR02.DB  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  FOLDER_RESTRUCTURE_PLAN.md  IMPLEMENTATION.md  MIGRATION.md  MIGRATION_NOTES.md  PR_DESCRIPTION.md  Procfile  README-FULLSTACK.md  README.md  UI_ENHANCEMENT_PLAN.md  VERCEL_DEPLOYMENT_SUMMARY.md  ads.txt  app.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements-dev.txt  requirements.txt  run_etl.py  run_web.py  streamlit_app.py  test_api.py  test_deployment.sh  (+1 more)
.claude/: settings.local.json
.claude/agents/: opus-orchestrator.md
api/: index.py
backend/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
bna_market/: __init__.py  __main__.py
bna_market/core/: __init__.py  config.py  exceptions.py
bna_market/pipelines/: for_sale.py  fred_metrics.py  rental.py  zillow_base.py
bna_market/services/: etl_service.py
bna_market/utils/: __init__.py  database.py  env_validator.py  exceptions.py  retry.py  validators.py
bna_market/web/: app.py
config/: settings.py
docs/: SUPABASE_EVALUATION.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: ads.txt
frontend/src/: App.vue  main.ts
pipelines/: forSale.py  otherMetricsPipe.py  rentalPipe.py  zillow_base.py
scripts/: __init__.py  add_indexes.py  cron_refresh.py
src/bna_market/: __main__.py
supabase/migrations/: 001_auth_and_user_features.sql  002_crm_and_investor_features.sql  003_historical_snapshot_tracking.sql
tests/: conftest.py
tests/integration/: test_etl.py
tests/unit/: test_analytics_lightweight.py  test_api_health.py  test_api_routes.py  test_etl_service.py  test_pipelines.py  test_utils.py  test_web_app.py
utils/: database.py  env_validator.py  etlRentals.py  exceptions.py  logger.py  retry.py  validators.py
web/: auth.py  billing.py  decorators.py  web_app.py
(+100 files in other folders)
